# OpenChat

./: .env.example  .gitignore  README.md  docker-compose.yml  livekit.yaml.tmpl
.github/workflows/: desktop-release.yml  desktop-windows.yml
apps/api/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  current-user.decorator.ts  session.guard.ts
apps/api/src/config/: config.controller.ts  configuration.ts
apps/api/src/dms/: dms.controller.ts  dms.module.ts  dms.service.ts
apps/api/src/friends/: friends.controller.ts  friends.service.ts
apps/api/src/gifs/: gifs.module.ts
apps/api/src/health/: health.controller.ts
apps/api/src/invites/: invites.controller.ts  invites.module.ts  invites.service.ts
apps/api/src/messages/: messages.controller.ts  messages.module.ts  messages.service.ts
apps/api/src/notifications/: notifications.controller.ts  notifications.module.ts  notifications.service.ts
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/web/public/: yt.html
apps/web/src/: App.tsx  index.css  store.ts
docs/: ARCHITECTURE.md  DEPLOY.md  SETUP.md
scripts/: check-secrets.sh  deploy.sh  setup.sh
(+77 files in other folders)
