[package]
name = "openchat-desktop"
version = "0.1.0"
description = "OpenChat desktop client"
edition = "2021"
rust-version = "1.77"

[lib]
name = "openchat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
